作品區：新增開合功能的動畫

--- a/index.html
+++ b/index.html
@@ -30,17 +30,22 @@
         <div class="navBarItem">CONTACTS</div>
     </div>
 
-    <div class="container-fluid h-100 main">
+    <div class="h-100 main">
         <div class="menuIcon">
             <img src="images/menu-24px.svg" alt="">
         </div>
-        <div class="container h-100 d-flex align-items-center justify-content-center">
+        <div class="container-fluid bg-dark text-light h-100 d-flex flex-column align-items-center justify-content-center">
             <div class="row bg-danger">
                 <div class="col"></div>
                 <div class="row">
                     <div class="col-12">HI</div>
                     <div class="col-12">MY NAME IS</div>
                     <div class="col-12">HAN</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col m-5">
+                    <div class="txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores quae delectus deserunt. Labore dolorum officiis similique, nesciunt ducimus error corporis quidem placeat, quibusdam molestiae distinctio magnam sequi totam ipsum eaque.</div>
                 </div>
             </div>
         </div>
@@ -58,21 +63,44 @@
                 
                 <a href="#c1" class="workBlock text-reset text-decoration-none showWorkBox">
                     <div class="zoom">
-                        <div id="c1" class="indexTop indexHide">web</div>
-                        <div class="content container bg-info">
-                            <div class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nobis assumenda. Incidunt reiciendis, aut facere sapiente dolor unde placeat laudantium reprehenderit sed in possimus fugit nam iusto doloribus doloremque commodi.</div>
-                            <div class="a">click</div>
+                        <div id="c1" class="indexTop indexHide">
+                            <div class="txt workIndexTitle">Web Front-end & Design</div>
+                            <div class="marquee marqueeTop">
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                            </div>
                         </div>
-                        <div class="indexBotton indexHide">web</div>
+                        <div class="content container-fluid">
+                            <div class="line lineTop"></div>
+                            <div class="txt container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nobis assumenda. Incidunt reiciendis, aut facere sapiente dolor unde placeat laudantium reprehenderit sed in possimus fugit nam iusto doloribus doloremque commodi.</div>
+                            <div class="line lineBottom"></div>
+                        </div>
+                        <div class="indexBotton indexHide">
+                            <div class="txt workIndexTitle">Web Front-end & Design</div>
+                            <div class="marquee marqueeBottom">
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                                <span class="marqueeItem">Web Front-end & Design</span>
+                            </div>
+                        </div>
                     </div>
                 </a>
                 <a href="#c2" class="workBlock text-reset text-decoration-none showWorkBox">
                     <div class="zoom" >
-                        <div id="c2" class="indexTop">web2</div>
-                        <div class="content container">
-                            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nobis assumenda. Incidunt reiciendis, aut facere sapiente dolor unde placeat laudantium reprehenderit sed in possimus fugit nam iusto doloribus doloremque commodi.</div>
+                        <div id="c2" class="indexTop">Graphic design</div>
+                        <div class="content container-fluid">
+                            <div class="line lineTop"></div>
+                            <div class="txt container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nobis assumenda. Incidunt reiciendis, aut facere sapiente dolor unde placeat laudantium reprehenderit sed in possimus fugit nam iusto doloribus doloremque commodi.</div>
+                            <div class="line lineBottom"></div>
                         </div>
-                        <div class="indexBotton">web2</div>
+                        <div class="indexBotton">Graphic design</div>
                     </div>
                 </a>
                 <!-- <div class="item">graphic</div>
