修正圖片顯示

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="blink" style="height: 25vh;border-bottom: 1px dotted rgba(0,0,0,0.3);">
                 <div class="container" style="height: 25vh;"></div>
             </div>
-            <div id="contacts" class="contacts" style="">
+            <div id="contacts" class="contacts">
                 <div class="index">Contacts</div>
                 <div  class="container" style="height: 110vh;">
                     <div class="title">designer</div>
@@ -483,7 +483,7 @@
                             </div>
                         </div>
                         <div class="col-9 ">
-                            <img class="" src="images/_MG_7781-15.jpg">
+                            <img class="" src="images/myphoto.jpg">
                         </div>
                     </div>
                     <div class="email">chihchun.han@gmail.com</div>
