RWD-test (intro works)

--- a/index.html
+++ b/index.html
@@ -86,27 +86,26 @@
                 <div class="sd-intro index">Intro</div>
                 <div class="intro" style="position: relative;">
                     <div class="container" >
-                        
                         <div class="title">
                             <small>01</small>
                             <div class="txt">Event Visual Design</div>
                             <div class="sub-title">活動視覺設計</div>
                         </div>
-                        <div class="row p-3 mb-5" style="height: 500px;">
-                            <div class="col-4 p-0">
-                                <img src="images/intro/LPS_ARCADIA-ELROW_2018_0661.JPG" style="object-fit: cover;height: 100%;">
+                        <div class="row p-3 mb-5">
+                            <div class="col-lg-4 col-12 p-0">
+                                <img src="images/intro/LPS_ARCADIA-ELROW_2018_0661.JPG">
                                 <div class="card-txt">EDM-party
                                     <small>電音派對活動</small>
                                 </div>
                             </div>
-                            <div class="col-4 p-0">
-                                <img src="images/intro/IMG_0418.jpg" style="object-fit: cover;height: 100%;">
+                            <div class="col-lg-4 col-12 p-0">
+                                <img src="images/intro/IMG_0418.jpg">
                                 <div class="card-txt">Physical activity
                                     <small>實體活動</small>
                                 </div>
                             </div>
-                            <div class="col-4 p-0">
-                                <img src="images/intro/IMG_0147.jpg" style="object-fit: cover;height: 100%;">
+                            <div class="col-lg-4 col-12 p-0">
+                                <img src="images/intro/IMG_0147.jpg">
                                 <div class="card-txt">Concert
                                     <small>演唱會</small>
                                 </div>
@@ -114,28 +113,27 @@
                             <div class="txt">2017-19在娛樂產業設計執行了大大小小的活動，在與時間賽跑的過程中堅持產出有美感的設計。</div>
                         </div>
                         <div class="row p-3">
-                            <div class="col-9 p-0 ml-auto ">
+                            <div class="col-lg-9 col-12 p-0 ml-auto ">
                                 <div class="title ml-auto">
                                     <small>02</small>
                                     3D Modle & Render
                                     <div class="sub-title">3D空間繪圖設計</div>
                                 </div>
-                                <div style="">
-                                    <img src="images/intro/View 0_5.jpg" style="width: 100%;height: 450px;object-fit: cover;">
-                                    <div class="txt">從學生時代開始研究與自學不同的建模與渲染軟體，範圍囊括產品、動畫、空間設計。讓提案時就可以與客戶有最完整的討論空間，尤其在大型活動的執行與跨部門合作時讓我可以知道更全面性的需求。不用依賴大家匱乏的想像力</div>
-                                    <br><small>-PRADA慈善晚會</small>
+                                <div>
+                                    <img src="images/intro/View 0_5.jpg">
+                                    <small>-PRADA慈善晚會</small>
+                                    <div class="txt">從學生時代開始研究與自學不同的建模與渲染軟體，範圍囊括產品、動畫、空間設計。讓提案時就可以與客戶有最完整的討論空間，尤其在大型活動的執行與跨部門合作時讓我可以知道更全面性的需求。</div>
                                 </div>
                             </div>
                         </div>
                         <div class="row p-3">
-                            <div class="col-9 p-0 mr-auto">
+                            <div class="col-lg-9 p-0 mr-auto">
                                 <div class="title">
                                     <small>03</small>
                                     Web Front-end & Design
                                     <div class="sub-title">網頁前端設計</div>
                                 </div>
-
-                                <img src="images/intro/web-04-aclock.png" style="width: 100%;height: 450px;object-fit: cover;">
+                                <img src="images/intro/web-04-aclock.png">
                                 <div class="txt">對前端有著強烈學習興趣，喜歡研究視覺互動與視覺特效表現方式。藉由網頁前端試著表現出平面設計無法達成的互動關係。</div>
                             </div>
                         </div>
@@ -230,7 +228,7 @@
             </div>
             <div class="blink container" style="height: 25vh;"></div>
             <!-- works -->
-            <div class="workList" style="position: relative;z-index: 1;background-color: #fff;">
+            <div class="workList" style="position: relative;z-index: 2;background-color: #fff;">
                 <div class="index">Works</div>
                 <div id="works" class="blink" style="height: 25vh;">
                     <div class="blink container" style="height: 25vh;">
