RWD-test update

--- a/index.html
+++ b/index.html
@@ -371,16 +371,16 @@
                 <div  class="container" style="height: 110vh;">
                     <div class="title">designer</div>
                     <div class="row designer">
-                        <div class="col-3 name">
+                        <div class="col-lg-9 col-12 p-0">
+                            <img class="" src="images/myphoto.jpg">
+                        </div>
+                        <div class="col-lg-3 col-12 name">
                             <div class="chi">
                                 韓志群
                             </div>
                             <div class="eng">
                                 chih- chun, han
                             </div>
-                        </div>
-                        <div class="col-9 ">
-                            <img class="" src="images/myphoto.jpg">
                         </div>
                     </div>
                     <div class="email">chihchun.han@gmail.com</div>
