--- a/index.html
+++ b/index.html
@@ -52,33 +52,53 @@
             <div class="txt">menu</div>
         </div>
         <!-- top -->
-        <div id="top" class="top text-light">
+        <div id="top" class="top">
             <div class="particles" id="particles-js"></div>
-            <div class="row container-fluid p-5">
-                <div class="col-9 mr-auto title">
-                    <img src="images/logo-single.svg" alt="">
-                </div>
-                <div class="col-3 ml-auto">
-                    <div class="list-group ">
-                        <a href="#" class="bg-transparent border-0 list-group-item list-group-item-action">
-                            Event Visual Design
-                        </a>
-                        <a href="#" class="bg-transparent border-0 list-group-item list-group-item-action">
-                            3D Modle & Render
-                        </a>                        
-                        <a href="#" class="bg-transparent border-0 list-group-item list-group-item-action">
-                            Web Front-end & Design
-                        </a>
+            <div class="row d-flex flex-row-reverse container-fluid p-5">
+                <div class="col-lg-12 col-9 p-0">
+                    <div class="list">
+                        <div class="cate">
+                            活動視覺設計<span>Event Visual Design</span>
+                        </div>
+                        <div class="cate">空間繪圖設計
+                            <span>3D Modle & Render</span>
+                        </div>
+                        <div class="cate">網頁前端設計
+                            <span>Web Front-end & Design</span>
+                        </div>
                     </div>
                 </div>
+                <div class="col-lg-12 col-3 title">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 1249.1 214.7">
+                        <path d="M336.1,214.7h-48.4l-40-123.3l-37.3,123.3H162L227,0.1h23.9c18.4,0,18.7,9.6,23.3,23.3L336.1,214.7z"/>
+                        <path d="M1204.8,0.1v106.1L1159.4,24c-7.1-13.5-11.7-23.9-31.3-23.9H1108v214.6h44.2V108.6l45.4,82.2c7.1,13.5,11.7,23.9,31.3,23.9
+                            h20.2V10.3c0-5.6-4.6-10.2-10.2-10.2L1204.8,0.1L1204.8,0.1z"/>
+                        <path d="M448.4,0.1v106.1L403,24c-7.1-13.5-11.7-23.9-31.3-23.9h-20.2v214.6h44.2V108.6l45.4,82.2c7.1,13.5,11.7,23.9,31.3,23.9
+                            h20.2V10.3c0-5.6-4.6-10.2-10.2-10.2L448.4,0.1L448.4,0.1z"/>
+                        <path d="M731.9,86c5.5-2.5,11.7-9.2,11.7-23.3v-8c0-29.4-23.3-54-52.7-54.6h-27c-12.3,0-23.6,4.1-32.7,10.8
+                            C622.6,4.4,612,0.3,600.4,0.1h-27c-30.7,0-55.2,24.5-55.2,54.6v105.5c0,30,24.5,54.6,55.2,54.6h27c11.5-0.5,22.1-4.5,30.7-10.9
+                            c9.2,6.8,20.5,10.9,32.9,10.9h27c29.4-1.2,52.7-25.1,52.7-54.6v-49.7c-11,4.9-28.2,12.3-31.9,14.1c-5.5,3.1-11.7,6.5-11.7,20.6v7
+                            c0,13.5-10.4,23.9-23.9,23.9c-12.2,0-22.1-9.4-23.1-21.8v-43.8c-0.1,0-0.1,0.1-0.2,0.1c-11,4.9-28,12.2-31.7,14
+                            c-5.5,3.1-11.7,6.5-11.7,20.6v7c0,2.1-0.3,4.1-0.8,6c-2.6,10.4-11.7,17.9-23.1,17.9c-12.9,0-23.3-10.4-23.3-23.9V62.1
+                            c0-12.9,10.4-23.3,23.3-23.3c11.4,0,20.5,7.5,23.1,17.5c0.5,1.9,0.8,7.1,0.8,9.1v35.3L641.4,86c5-2.2,10.5-8,11.4-19.6
+                            c0.1-1.2,0.2-5.7,0.2-7V60c1-11.9,10.9-21.3,23.1-21.3c13.5,0,23.9,10.4,23.9,23.3v38.6L731.9,86z"/>
+                        <path d="M786.9,214.7c-13.5,0-17.8-9.8-17.8-21.8V0.1h44.2v76.3c0.6,5.5,4.9,9.8,10.4,9.8h47.8V0h33.9c5.6,0,10.2,4.6,10.2,10.2
+                            v182.6c0,12-4.3,21.8-17.8,21.8h-26.4V145c0-12.3-4.9-15.3-15.3-15.3h-42.9v84.9L786.9,214.7L786.9,214.7z"/>
+                        <path d="M17.8,214.7C4.3,214.7,0,204.9,0,192.9V0.1h44.2v76.3c0.6,5.5,4.9,9.8,10.4,9.8h47.8V0h33.9c5.6,0,10.2,4.6,10.2,10.2v182.6
+                            c0,12-4.3,21.8-17.8,21.8h-26.4V145c0-12.3-4.9-15.3-15.3-15.3H44.1v84.9L17.8,214.7L17.8,214.7z"/>
+                        <path d="M1082.4,162c0,29.4-23.9,51.5-52.7,52.1v0.6H996c-30,0-54.6-24.6-54.6-54.6V12.3C942,5.6,947.5,0,954.3,0h31.3v153.9
+                            c0,12.9,10.4,23.3,23.3,23.3h6.1c12.9,0,23.3-10.4,23.3-23.3V0.1h33.9c5.6,0,10.2,4.6,10.2,10.2L1082.4,162L1082.4,162z"/>
+                    </svg>
+                </div>
+
             </div>
         </div>
         <div class="top-bg h-100"></div>
-        <div class="page" style="overflow: hidden;">
+        <div class="page">
             <div class="scroll">
-                <div class="txt">scroll</div>
-                <div class="line"></div>
-                <div class="tri"></div>
+                
+                <div class="txt">SCROLL FOR MORE<span class="line"></span></div>
             </div>
             <!-- intro -->
             <div id="intro">
@@ -148,7 +168,7 @@
                                     <div class="row">
                                         <div class="col-lg-6 col-12">
                                             <div class="txt">
-                                                EDM-party
+                                                萬人電音趴
                                             </div>
                                         </div>
                                         <div class="col-lg-6 col-12">
@@ -163,7 +183,7 @@
 
                                         <div class="col-lg-6 col-12">
                                             <div class="txt">
-                                                Hair Fasion Show
+                                                妝髮造型大秀
                                             </div>
                                         </div>
                                         <div class="col-lg-6 col-12">
@@ -194,7 +214,7 @@
 
                                         <div class="col-lg-6 col-12">
                                             <div class="txt">
-                                                Physical activity
+                                                商業實體活動
                                             </div>
                                         </div>
                                         <div class="col-lg-6 col-12">
@@ -232,6 +252,11 @@
                 <div class="index">Works</div>
                 <div id="works" class="blink" style="height: 25vh;">
                     <div class="blink container" style="height: 25vh;">
+                        <div class="title">
+                            <small>01</small>
+                            <div class="txt">Event Visual Design</div>
+                            <div class="sub-title">活動視覺設計</div>
+                        </div>
                     </div>
                 </div>
                     <div class="indexItem container" data-index="WebFrontendDesign">
@@ -368,7 +393,7 @@
             </div>
             <div id="contacts" class="contacts" style="position: relative;background-color: #fff;z-index: 2;">
                 <div class="index">Contacts</div>
-                <div  class="container" style="height: 110vh;">
+                <div  class="container" style="height: 100vh;">
                     <div class="title">designer</div>
                     <div class="row designer">
                         <div class="col-lg-9 col-12 p-0">
