adjest font setting

--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                                         <div class="col-lg-6 col-12">
                                             <div class="txt">
                                                 <ul>
-                                                    <li><div class="item">AlternativeHairShow - VisionaryAwardTaiwan</div> <span class="badge badge-secondary">2019</span></li>
-                                                    <li><div class="item">KEVIN.MURPHY大秀 X 台北髮型時尚週</div> <span class="badge badge-secondary">2018</span></li>
+                                                    <li><div class="item">AlternativeHairShow</div> <span class="badge badge-secondary">2019</span></li>
+                                                    <li><div class="item">KEVIN.MURPHY大秀</div> <span class="badge badge-secondary">2018</span></li>
                                                     <li><div class="item">施華蔻120週年髮型秀</div> <span class="badge badge-secondary">2018</span></li>
-                                                    <li><div class="item">KEVIN.MURPHY大秀 X 台北髮型時尚週</div> <span class="badge badge-secondary">2017</span></li>
+                                                    <li><div class="item">KEVIN.MURPHY大秀</div> <span class="badge badge-secondary">2017</span></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -246,12 +246,12 @@
                     </div>
                 </div>
             </div>
-            <div class="blink container" style="height: 25vh;"></div>
+            <div class="blink container" ></div>
             <!-- works -->
             <div class="workList" style="position: relative;z-index: 2;background-color: #fff;">
                 <div class="index">Works</div>
-                <div id="works" class="blink" style="height: 25vh;">
-                    <div class="blink container" style="height: 25vh;">
+                <div id="works" class="blink" >
+                    <div class="blink container" >
                         <div class="title">
                             <small>01</small>
                             <div class="txt">Event Visual Design</div>
@@ -387,8 +387,8 @@
                                 參與全台200件校園活動設計，演唱會、晚會、名人講座。一手包辦活動主視覺與衍伸物：門票、邀請卡、會場舞台、旗幟、手環等周邊商品。幫助學生舉辦校園活動                            </div>
                         </div>
                     </div>
-                    <div class="blink" style="height: 25vh;border-bottom: 1px dotted rgba(0,0,0,0.3);">
-                        <div class="container" style="height: 25vh;"></div>
+                    <div class="blink" style="border-bottom: 1px dotted rgba(0,0,0,0.3);">
+                        <div class="container" ></div>
                     </div>
             </div>
             <div id="contacts" class="contacts" style="position: relative;background-color: #fff;z-index: 2;">
