中期測試版

--- a/index.html
+++ b/index.html
@@ -246,17 +246,18 @@
                     </div>
                 </div>
             </div>
-            <div class="blink container" ></div>
             <!-- works -->
             <div class="workList" style="position: relative;z-index: 2;background-color: #fff;">
                 <div class="index">Works</div>
-                <div id="works" class="blink" >
+                <div id="works" class="blink">
                     <div class="blink container" >
-                        <div class="title">
-                            <small>01</small>
-                            <div class="txt">Event Visual Design</div>
-                            <div class="sub-title">活動視覺設計</div>
-                        </div>
+                    </div>
+                </div>
+                <div class="container pb-5">
+                    <div class="title">
+                        <small>06</small>
+                        <div class="txt">works</div>
+                        <div class="sub-title">精選作品</div>
                     </div>
                 </div>
                     <div class="indexItem container" data-index="WebFrontendDesign">
@@ -387,19 +388,16 @@
                                 參與全台200件校園活動設計，演唱會、晚會、名人講座。一手包辦活動主視覺與衍伸物：門票、邀請卡、會場舞台、旗幟、手環等周邊商品。幫助學生舉辦校園活動                            </div>
                         </div>
                     </div>
-                    <div class="blink" style="border-bottom: 1px dotted rgba(0,0,0,0.3);">
-                        <div class="container" ></div>
-                    </div>
             </div>
             <div id="contacts" class="contacts" style="position: relative;background-color: #fff;z-index: 2;">
                 <div class="index">Contacts</div>
                 <div  class="container" style="height: 100vh;">
                     <div class="title">designer</div>
                     <div class="row designer">
-                        <div class="col-lg-9 col-12 p-0">
-                            <img class="" src="images/myphoto.jpg">
+                        <div class="col-lg-9 col-auto p-0">
+                            <img class="mx-auto" src="images/myphoto.jpg">
                         </div>
-                        <div class="col-lg-3 col-12 name">
+                        <div class="col-lg-3 col-auto name">
                             <div class="chi">
                                 韓志群
                             </div>
