--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
     <link rel="stylesheet" href="css/animate.css">
 
     <!-- slick -->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" /> -->
     <style>
 
     </style>
 </head>
 
 <body>
+    <div class="loading">
+        <div id="pregressbar"></div>
+    </div>
+    <div class="tail"></div>
     <div class="modal fade" id="work" tabindex="-1" ></div>
     <!-- menuicon-sm -->
-    <div class="menuIcon-sm text-dark">
+    <div class="menuIcon-sm">
         <img src="images/menu-24px.svg" alt="">
     </div>
     <!-- navBar -->
@@ -430,12 +434,101 @@
 
     <script type="text/javascript" src="http://gsgd.co.uk/sandbox/jquery/easing/jquery.easing.1.3.js"></script>
     <!-- slick -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.js"></script>
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.js"></script> -->
 
     <!-- particles -->
     <script src="particles.js"></script>
     <script src="js/app.js"></script>
+
+    <!-- progressBarJs -->
+    <script src="js/ProgressBarJs/progressbar.js"></script>
+    <script src="js/ProgressBarJs/progressbar.min.js"></script>
+
+    <script>
+        var bar = new ProgressBar.Line('#pregressbar', {
+        strokeWidth: 4,
+        easing: 'easeInOut',
+        duration: 1400,
+        color: '#555',
+        trailColor: '#eee',
+        trailWidth: 1,
+        svgStyle: {width: '100%', height: '100%'},
+        text: {
+            style: {
+            // Text color.
+            // Default: same as stroke color (options.color)
+            color: '#999',
+            position: 'absolute',
+            left: '50%',
+            top: '30px',
+            padding: 0,
+            margin: 0,
+            transform: 'translateX(-50%)'
+            },
+            autoStyleContainer: false
+        },
+        from: {color: '#333'},
+        to: {color: '#fff'},
+        step: (state, bar) => {
+            bar.setText(Math.round(bar.value() * 100) + ' %');
+            bar.path.setAttribute('stroke', state.color);
+        }
+        });
+
+        bar.animate(1.0,()=>{// Number from 0.0 to 1.0
+            // $('.loading').fadeOut(1000)
+            $('.loading').remove()
+            $('.top').addClass('clip')
+            // bar.destroy()
+            enableScroll()
+        });  
+
+        // left: 37, up: 38, right: 39, down: 40,
+        // spacebar: 32, pageup: 33, pagedown: 34, end: 35, home: 36
+        var keys = {37: 1, 38: 1, 39: 1, 40: 1};
+
+        function preventDefault(e) {
+        e.preventDefault();
+        }
+
+        function preventDefaultForScrollKeys(e) {
+        if (keys[e.keyCode]) {
+            preventDefault(e);
+            return false;
+        }
+        }
+
+        // modern Chrome requires { passive: false } when adding event
+        var supportsPassive = false;
+        try {
+        window.addEventListener("test", null, Object.defineProperty({}, 'passive', {
+            get: function () { supportsPassive = true; } 
+        }));
+        } catch(e) {}
+
+        var wheelOpt = supportsPassive ? { passive: false } : false;
+        var wheelEvent = 'onwheel' in document.createElement('div') ? 'wheel' : 'mousewheel';
+
+        // call this to Disable
+        function disableScroll() {
+        window.addEventListener('DOMMouseScroll', preventDefault, false); // older FF
+        window.addEventListener(wheelEvent, preventDefault, wheelOpt); // modern desktop
+        window.addEventListener('touchmove', preventDefault, wheelOpt); // mobile
+        window.addEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
+
+        // call this to Enable
+        function enableScroll() {
+        window.removeEventListener('DOMMouseScroll', preventDefault, false);
+        window.removeEventListener(wheelEvent, preventDefault, wheelOpt); 
+        window.removeEventListener('touchmove', preventDefault, wheelOpt);
+        window.removeEventListener('keydown', preventDefaultForScrollKeys, false);
+        }
+        
+        disableScroll()
+        
+    </script>
 
 
 
